# SimpleLlama

./: .gitignore  Cargo.toml  README.md  shell.nix
.cargo/: config.toml
examples/: main.rs
examples/basic/: main.rs
examples/chat_streaming/: main.rs
examples/copying_models/: main.rs
examples/deleting_model/: main.rs
examples/deleting_models/: main.rs
examples/pulling_models/: main.rs
examples/stream_basic/: main.rs
examples/streaming_basic/: Cargo.toml
examples/streaming_basic/src/: main.rs
src/: lib.rs  tests.rs  types.rs  utils.rs
src/chat/: memory.rs  message.rs  mod.rs
src/common/: constants.rs  mod.rs  utils.rs
src/models/: client.rs  copy_info.rs  delete_info.rs  mod.rs  options.rs  pull_info.rs
src/models/control/: information.rs  mod.rs
src/models/options/: mod.rs  options.rs
src/models/stream/: client.rs  mod.rs  stream_client.rs
src/stream/: mod.rs
