[package]
name = "simple_llama"
version = "1.0.0"
edition = "2024"

description = "Rust crate for the Ollama API."
readme = "README.md"
license = "MIT"
repository = ""
homepage = "https://github.com/stewthestew/SimpleLlama"
keywords = ["llm", "ai", "rust"]
catagories = ["API-bindings"]

[dependencies]
tokio = { version = "1.44.0", features = ["full"]  } 
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.12.12", features = ["json"] }