[package]
name = "simple_llama_rs"
version = "1.0.3"
edition = "2024"

description = "Rust crate for the Ollama API."
readme = "README.md"
license = "MIT"
repository = "https://github.com/stewthestew/SimpleLlama"
homepage = "https://github.com/stewthestew/SimpleLlama"
keywords = ["llm", "ai", "ollama", "rust"]
catagories = ["API-bindings"]

[features]
stream = ["dep:tokio-stream", "dep:bytes", "reqwest/stream"]

[dependencies]
tokio = { version = "1.44.0", features = ["full", "macros"]  } 
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.12.12", features = ["json"] }

# Stream
tokio-stream = { version = "0.1.17", optional = true }
bytes = { version = "1.10.1", optional = true }
