[package]
name = "simple_llama_rs"
version = "1.0.4"
edition = "2024"

description = "Rust crate for the Ollama API."
readme = "README.md"
license = "MIT"
repository = "https://github.com/stewthestew/SimpleLlama"
homepage = "https://github.com/stewthestew/SimpleLlama"
keywords = ["llm", "ai", "ollama", "rust"]
catagories = ["API-bindings"]

[features]

[dependencies]
tokio = { version = "1.44.2", features = ["full", "macros"]  } 
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.12.15", features = ["json", "stream"] }

tokio-stream = "0.1.17"
bytes = "1.10.1"
